# crypto-llm-insights

./: docker-compose.yml
backend/: .env.development  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1aa1aca006db_create_initial_tables.py
backend/app/models/: main.py
frontend/: package-lock.json
